Different link for ssbw.

--- a/notary/templates/base.html
+++ b/notary/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>{% block title %}Notary{% endblock %}</title>
-<link rel="stylesheet" type="text/css" href="http://github.com/mbr/draft-css/raw/master/simple-ssbw.css">
+<link rel="stylesheet" type="text/css" href="https://raw.github.com/mbr/draft-css/master/simple-ssbw.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
 
 <style type="text/css">
