Promote it like it's hot.

--- a/notary/templates/base.html
+++ b/notary/templates/base.html
@@ -36,5 +36,6 @@ $(document).ready(function() {
 <body>
 {% block body %}
 {% endblock %}
+<div class="fineprint">Like notary? Get it on <a href="https://github.com/mbr/notary">GitHub</a>.</div>
 </body>
 </html>
